# tsurphu-lab-

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/orchestration/: cli.py
tsurphu/: __init__.py
tsurphu/astro/: coords.py
tsurphu/calendario/: backend_henning.py
tsurphu/cielo/: __init__.py  m1_cielo.py
tsurphu/integraciones/: stellarium_rc.py
tsurphu/scripts/: ephemeris_snapshot.py
