[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsurphu-lab"
version = "0.0.0"
requires-python = ">=3.10"
description = "Tsurphu lab engines and tools"
readme = "README.md"
license = { text = "Proprietary" }
dependencies = []
[project.scripts]
tsurphu = "orchestration.cli:main"



[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]